--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
 		"@babel/plugin-proposal-decorators": "^7.24.1",
 		"@babel/preset-env": "^7.24.4",
 		"@babel/preset-typescript": "^7.24.1",
+		"@faker-js/faker": "^8.4.1",
 		"@jest/globals": "^29.7.0",
 		"@types/debug": "^4.1.12",
 		"@types/express": "^4.17.21",
