--- a/compose.yml
+++ b/compose.yml
@@ -6,6 +6,7 @@ services:
     build: ./api
     container_name: dhbw-api
     environment:
+      NODE_ENV: development
       DATABASE_USERNAME: ${DATABASE_USERNAME}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_NAME: ${DATABASE_NAME}
@@ -17,6 +18,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    volumes:
+      - ./api/src/migration:/app/src/migration:rw
     healthcheck:
       test: wget --no-verbose --spider -S -T 1 http://api:8080/health || exit 1
       interval: 30s
@@ -32,8 +35,6 @@ services:
       POSTGRES_DB: ${DATABASE_NAME}
     volumes:
       - db-data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     networks:
       - data
     healthcheck:
@@ -51,7 +52,7 @@ services:
     volumes:
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
-      - "8000:80"
+      - "10000:80"
     networks:
       - net
 
