--- a/compose.yml
+++ b/compose.yml
@@ -15,6 +15,8 @@ services:
     networks:
       - net
       - data
+#    ports:
+#      - "8080:8080"
     depends_on:
       db:
         condition: service_healthy
